# pixverse-video-generation

./: .env.example  .gitignore  CLAUDE.md  PixVerse_AI_Professional_Guideline.md  pyproject.toml  user_guid.md
app/: __init__.py  config.py  main.py
app/api/: __init__.py  deps.py
app/api/v1/: bridge.py  router.py
app/core/: __init__.py  exceptions.py  logging.py
app/schemas/: __init__.py  bridge.py  concept_fusion.py  feedback_loop.py  parameter_injection.py  production_pipeline.py  prompt.py  shot_sequence.py
app/services/: __init__.py  concept_fusion.py  feedback_loop.py  parameter_injector.py  pixverse_presets.py  production_pipeline.py  prompt_transformer.py  semantic_canvas_client.py  shot_chainer.py
frontend/: index.html
requirements/: base.txt  dev.txt
tests/: __init__.py  conftest.py  test_bridge_api.py  test_feedback_loop.py  test_phase4.py  test_production_pipeline.py  test_prompt_transformer.py  test_shot_chainer.py  test_shot_schemas.py
